POST /v1/token/create_by_credentials {tokenName, username, password}
